<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="AppName">Historiaya</string>
    <string name="TagLine">A Journey to the Past at Your Fingertips</string>
    <string name="Augmented_Reality">Augmented Reality</string>
    <string name="Tag_tag_line">Explore historical landmarks and cultural heritage sites through virtual tours with Augmented Reality technology.</string>
    <string name="GetStarted">Get Started</string>
    <string name="twopips">image</string>
    <string name="rizal">image</string>
    <string name="grass">image</string>
    <string name="clouds">image</string>
    <string name="newproject">image</string>
    <string name="a210">image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="forgotpass">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="donot">Do not have an account?</string>
    <string name="reg">Register Now</string>
    <string name="face">image</string>
    <string name="gmail">image</string>
    <string name="inputpass">Password</string>
    <string name="inpass">inpass</string>
    <string name="ResetPass">Reset Password</string>
    <string name="Resetenteremail">Enter the Email Address associated with your account</string>
    <string name="YourEmail">Your Email</string>
    <string name="Reset">Reset</string>
    <string name="createnew">Create New Password</string>
    <string name="newpass">Your new password must be different from previous used passwords.</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="ContactNumber">Contact #</string>
    <string name="Password">Password</string>
    <string name="Re_enter">Re-enter Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="UploadImage">Upload an Image</string>
    <string name="BySU">By Signing Up, you agree to the Historiaya <b>Privacy</b> and <b>Terms</b></string>
    <string name="otp">OTP Verification</string>
    <string name="WeSent">We Sent you a one time password on this <b>Email Address</b></string>
    <string name="ResendOTP"><b><u>Resend</u></b> OTP in</string>
    <string name="ConfirmButton">Confirm</string>
    <string name="Incorrect">Incorrect Email Address?</string>
    <string name="EditNow">Edit Now</string>
    <string name="Resend">Resend</string>
    <string name="Story">Main Story</string>
    <string name="ScavengerHunt">Scavenger Hunt</string>
    <string name="Library">Library</string>
    <string name="StorySelection">Main Story</string>
    <string name="MainStory">Main Story</string>
    <string name="Start">Start</string>
    <string name="BookNow">Book Now</string>
    <string name="Store">Store</string>
    <string name="Map">Map</string>
    <string name="Sharelink">https://chat.openai.com</string>
    <string name="Profile">Profile</string>
    <string name="Achievements">Achievements</string>
    <string name="MyBooking">My Booking</string>
    <string name="History">History</string>
    <string name="MyProfile">My Profile</string>
    <string name="First_Name">First Name</string>
    <string name="Last_Name">Last Name</string>
    <string name="Save">Save</string>
    <string name="Name" />
    <string name="Uploadanimage">Upload an Image</string>
    <string name="Settings">Settings</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Credits">Credits</string>
    <string name="Feedback">Feedback</string>
    <string name="PrivacyandTerms">Privacy and Terms</string>
    <string name="LogOut">Log Out</string>
    <string name="audio">Audio</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="Notifications">Notifications</string>
    <string name="Mark">Mark all as Read</string>
    <string name="View"><u>View all notifications</u></string>
    <string name="Chap1">Rizal\nMonument</string>
    <string name="Chap2">Don \nCatalino</string>
    <string name="Chap3">Gala \nRodriguez</string>
    <string name="Chap4">Natalio \nEnriquez</string>
    <string name="Chap5">Chapter 5</string>
    <string name="start">Start</string>
    <string name="Rizal_c1">Chapter 1 : Footsteps of Rizal</string>
    <string name="Rizal_c2">Chapter 2 : Locked</string>
    <string name="Rizal_c3">Chapter 3 : Locked</string>
    <string name="Rizal_Quiz">Quiz</string>
    <string name="Don_c1">Chapter 1</string>
    <string name="Don_c2">Chapter 2 : Locked</string>
    <string name="Don_c3">Chapter 3 : Locked</string>
    <string name="Don_Quiz">Quiz</string>
    <string name="Gala_c1">Chapter 1</string>
    <string name="Gala_c2">Chapter 2 : Locked</string>
    <string name="Gala_c3">Chapter 3 : Locked</string>
    <string name="Gala_Quiz">Quiz</string>
    <string name="Natalio_c1">Chapter 1</string>
    <string name="Natalio_c2">Chapter 2 : Locked</string>
    <string name="Natalio_c3">Chapter 3 : Locked</string>
    <string name="Natalio_Quiz">Quiz</string>
    <string name="hh1">Don Catalino Rodriguez House</string>
    <string name="hh2">Gala Rogriguez House</string>
    <string name="des1">A historic \nresidence \nshowcasing \narchitectural \nelegance and \ncultural \nheritage.</string>
    <string name="des2">A historic \nresidence \nshowcasing \narchitectural \nelegance and \ncultural \nheritage.</string>
    <string name="facebook_app_id">1356587365274108</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor.
    </string>
    <string name="Purchases">Purchases</string>
    <string name="store">Store</string>
    <string name="prodes">Description</string>
    <string name="product">Product</string>
    <string name="price1">90</string>
    <string name="price2">80</string>
    <string name="price3">100</string>
    <string name="pinagong">Pinagong</string>
    <string name="uraro">Uraro</string>
    <string name="tikoy">Tikoy</string>
    <string name="bignay">Bignay Lipote</string>
    <string name="paborita">Paborita</string>
    <string name="broas">Broas</string>
    <string name="apas">Apas</string>
    <string name="yema">Yema de Leche</string>
    <string name="scan_me">Scan Me</string>
    <string name="discount">5% off for 5pcs</string>
    <string name="discount1">5% off for 5pcs\nPinagong</string>
    <string name="discount11">5% off for 5pcs Pinagong</string>
    <string name="discount2">5% off for 5pcs\nPaborita</string>
    <string name="discount3">5% off for 5pcs\nBroas</string>
    <string name="discount4">5% off for 5pcs\nTikoy</string>
    <string name="discount5">5% off for 5pcs\nBignay Lipote</string>
    <string name="questclear">Quest Clear</string>
    <string name="scavenger">Scavenger</string>
    <string name="quiz">Quiz</string>
    <string name="submit">SUBMIT</string>
    <string name="booknow">BookNow</string>
    <string name="select_date">Select Date</string>
    <string name="txtview_for_select_date">txtview for select date</string>
    <string name="book_now">Book Now</string>
    <string name="of_tourist"># of Tourist</string>
    <string name="total_number_of_tourist">Total Number of Tourist</string>
    <string name="select_tour">Select Tour</string>
    <string-array name="HeritageHouses">
        <item> Select Tour </item>
        <item> Don Catalino Rodriguez </item>
        <item> Gala Rogriguez  </item>
        <item> Both </item>
    </string-array>
    <string-array name="TouristNumbers">
        <item> Select Tourists </item>
        <item> 1 </item>
        <item> 2</item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
        <item> 7 </item>
        <item> 8 </item>
        <item> 9 </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12</item>
        <item> 13 </item>
        <item> 14 </item>
        <item> 15 </item>
        <item> 16 </item>
        <item> 17 </item>
        <item> 18 </item>
        <item> 19 </item>
        <item> 20 </item>
        <item> 21 </item>
        <item> 22</item>
        <item> 23 </item>
        <item> 24 </item>
        <item> 25 </item>
        <item> 26 </item>
        <item> 27 </item>
        <item> 28 </item>
        <item> 29 </item>
        <item> 30 </item>
    </string-array>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
    </string>
    <string name="payment_summary">Payment Summary</string>
    <string name="backbutton">backbutton</string>
    <string name="image">image</string>
    <string name="done">Done</string>
    <string name="title_activity_user">userActivity</string>
    <string name="title_activity_booking">Booking</string>
    <string name="gala_rogriguez">Gala Rogriguez</string>
    <string name="don_catalino_rodriguez">Don Catalino Rodriguez</string>
    <string name="_0936_857_7949">0936–857-7949</string>
    <string name="achievements">Achievements</string>
    <string name="history">History</string>
    <string name="reservation_fee_heritage_house">Reservation Fee (Heritage House</string>
    <string name="reservation_fee_tour_guide">Reservation Fee (Tour Guide)</string>
    <string name="subtotal">Subtotal</string>
    <string name="heritage_house">HERITAGE HOUSE</string>
    <string name="heritagehouse">HeritageHouse</string>
    <string name="select_user"> Select User</string>
    <string name="sign_in">Sign In</string>
    <string name="type_a_message">Type a message…</string>
    <string name="mybooking">mybooking</string>
    <string name="don_catalino_house">Don Catalino House</string>
    <string name="service_charge">Service Charge</string>
    <string name="total">Total</string>
    <string name="gcash_qr_code">GCASH QR CODE</string>
    <string name="review_the_mobile_number_and_amount_carefully_before_sending_confirmed_transactions_will_not_be_refunded">Review the mobile number and amount carefully before sending. Confirmed transactions will not be refunded.</string>
    <string name="note">NOTE:</string>
    <string name="review_the_name_and_amount_carefully_before_sending">Review the name and amount carefully before sending.</string>
    <string name="send_the_proof_of_payment_trough_chat">Send the proof of payment trough chat.</string>
    <string name="servicecharge">Service Charge</string>
    <string name="galarodriguez">Gala Rodriguez</string>
    <string name="doncatalino">Don Catalino</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historiaya_terms_and_conditions">Historiaya Terms and Conditions</string>
    <string name="welcome">Welcome</string>
    <string name="check">By checking this box, you agree to the terms and conditions outlined above and acknowledge that you have read and understood our policies.</string>
</resources>