<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createnewpass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E1FAFF"
    tools:context=".CreateNewPassword">

    <!-- For update lang-->
    <ImageView
        android:id="@+id/cloud"
        android:layout_width="432dp"
        android:layout_height="424dp"
        android:contentDescription="@string/clouds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/shadow"
        android:clickable="true"
        android:contentDescription="@string/ResetPass"
        android:contextClickable="true"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/createnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/createnew"
        android:textAlignment="center"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newpass"
        android:layout_width="317dp"
        android:layout_height="55dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/montserrat"
        android:maxLines="2"
        android:text="@string/newpass"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createnew" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:layout_marginTop="50dp"
        android:background="#E4EDEF"
        android:fontFamily="@font/montserrat"
        android:hint="@string/newpassword"
        android:paddingLeft="15dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newpass" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:background="#E4EDEF"
        android:fontFamily="@font/montserrat"
        android:hint="@string/confirmpassword"
        android:paddingLeft="15dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newpassword" />

    <Button
        android:id="@+id/Reset"
        android:layout_width="215dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="312dp"
        android:background="@drawable/resetbutton"
        android:clickable="true"
        android:contextClickable="true"
        android:text="@string/Reset"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396" />

</androidx.constraintlayout.widget.ConstraintLayout>