<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivacyandTerms">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shadow"
        android:contentDescription="@string/ResetPass"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/privacyandterms"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:background="@color/white"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="15sp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/historiaya_terms_and_conditions"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/privacyandterms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkboxTnC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/check"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/ConfirmTnC"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/ConfirmButton"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:background="@drawable/store_price_button_ok"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>